refactor: lint & format